// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Perfil /> renders correctly 1`] = `
<View
  accessibilityIgnoresInvertColors={true}
  style={
    Object {
      "height": 1334,
      "padding": 0,
      "width": 750,
      "zIndex": 1,
    }
  }
>
  <Image
    source={1}
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {
          "height": 1334,
          "width": 750,
        },
        Object {
          "height": 466.9,
          "width": 750,
        },
      ]
    }
  />
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
        },
        false,
        Object {
          "flex": 1,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        null,
        false,
        false,
        false,
        null,
        null,
        null,
        undefined,
      ]
    }
    theme={
      Object {
        "COLORS": Object {
          "BLACK": "#000000",
          "BLOCK": "#808080",
          "DRIBBBLE": "#EA4C89",
          "ERROR": "#FE2472",
          "FACEBOOK": "#3B5998",
          "GREY": "#898989",
          "ICON": "#000000",
          "INFO": "#1232FF",
          "INPUT": "#808080",
          "MUTED": "#9FA5AA",
          "NAVBAR": "#F9F9F9",
          "NEUTRAL": "rgba(255,255,255, 0.65)",
          "PLACEHOLDER": "#9FA5AA",
          "PRIMARY": "#B23AFC",
          "SUCCESS": "#45DF31",
          "THEME": "#B23AFC",
          "TRANSPARENT": "transparent",
          "TWITTER": "#5BC0DE",
          "WARNING": "#FF9C09",
          "WHITE": "#FFFFFF",
        },
        "SIZES": Object {
          "ANDROID_ELEVATION": 1,
          "BASE": 16,
          "BLOCK_SHADOW_OPACITY": 0.15,
          "BLOCK_SHADOW_RADIUS": 8,
          "BORDER_RADIUS": 6,
          "BORDER_WIDTH": 0.8,
          "BUTTON_HEIGHT": 44,
          "BUTTON_SHADOW_RADIUS": 10,
          "BUTTON_WIDTH": 144,
          "CARD_AVATAR_HEIGHT": 40,
          "CARD_AVATAR_RADIUS": 20,
          "CARD_AVATAR_WIDTH": 40,
          "CARD_BORDER_RADIUS": 6.4,
          "CARD_BORDER_WIDTH": 0.8,
          "CARD_FOOTER_HORIZONTAL": 12,
          "CARD_FOOTER_VERTICAL": 12,
          "CARD_IMAGE_HEIGHT": 200,
          "CARD_MARGIN_VERTICAL": 14,
          "CARD_ROUND": 3,
          "CARD_ROUNDED": 8,
          "CARD_WIDTH": 718,
          "CHECKBOX_HEIGHT": 20,
          "CHECKBOX_WIDTH": 20,
          "FONT": 16,
          "ICON": 16,
          "INPUT_BORDER_RADIUS": 8,
          "INPUT_BORDER_WIDTH": 0.8,
          "INPUT_HEIGHT": 44,
          "INPUT_HELP_TEXT": 12.8,
          "INPUT_HORIZONTAL": 16,
          "INPUT_LABEL_BOTTOM": 4,
          "INPUT_LABEL_TEXT": 14.4,
          "INPUT_ROUNDED": 27.2,
          "INPUT_TEXT": 14,
          "NAVBAR_HEIGHT": 66,
          "NAVBAR_LEFT_FLEX": 0.5,
          "NAVBAR_LEFT_HEIGHT": 93.38000000000001,
          "NAVBAR_LEFT_MARGIN": 16,
          "NAVBAR_RIGHT_FLEX": 0.5,
          "NAVBAR_RIGHT_HEIGHT": 93.38000000000001,
          "NAVBAR_RIGHT_MARGIN": 16,
          "NAVBAR_TITLE_FLEX": 2,
          "NAVBAR_TITLE_HEIGHT": 93.38000000000001,
          "NAVBAR_TITLE_TEXT": 14,
          "NAVBAR_VERTICAL": 16,
          "OPACITY": 0.8,
          "RADIO_HEIGHT": 24,
          "RADIO_THICKNESS": 2,
          "RADIO_WIDTH": 24,
          "THUMB_SIZE": 25,
          "TRACK_SIZE": 4,
        },
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "flexDirection": "column",
          },
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          false,
          null,
          false,
          false,
          false,
          null,
          null,
          null,
          Object {
            "paddingHorizontal": 20,
            "position": "absolute",
            "width": 750,
            "zIndex": 5,
          },
        ]
      }
      theme={
        Object {
          "COLORS": Object {
            "BLACK": "#000000",
            "BLOCK": "#808080",
            "DRIBBBLE": "#EA4C89",
            "ERROR": "#FE2472",
            "FACEBOOK": "#3B5998",
            "GREY": "#898989",
            "ICON": "#000000",
            "INFO": "#1232FF",
            "INPUT": "#808080",
            "MUTED": "#9FA5AA",
            "NAVBAR": "#F9F9F9",
            "NEUTRAL": "rgba(255,255,255, 0.65)",
            "PLACEHOLDER": "#9FA5AA",
            "PRIMARY": "#B23AFC",
            "SUCCESS": "#45DF31",
            "THEME": "#B23AFC",
            "TRANSPARENT": "transparent",
            "TWITTER": "#5BC0DE",
            "WARNING": "#FF9C09",
            "WHITE": "#FFFFFF",
          },
          "SIZES": Object {
            "ANDROID_ELEVATION": 1,
            "BASE": 16,
            "BLOCK_SHADOW_OPACITY": 0.15,
            "BLOCK_SHADOW_RADIUS": 8,
            "BORDER_RADIUS": 6,
            "BORDER_WIDTH": 0.8,
            "BUTTON_HEIGHT": 44,
            "BUTTON_SHADOW_RADIUS": 10,
            "BUTTON_WIDTH": 144,
            "CARD_AVATAR_HEIGHT": 40,
            "CARD_AVATAR_RADIUS": 20,
            "CARD_AVATAR_WIDTH": 40,
            "CARD_BORDER_RADIUS": 6.4,
            "CARD_BORDER_WIDTH": 0.8,
            "CARD_FOOTER_HORIZONTAL": 12,
            "CARD_FOOTER_VERTICAL": 12,
            "CARD_IMAGE_HEIGHT": 200,
            "CARD_MARGIN_VERTICAL": 14,
            "CARD_ROUND": 3,
            "CARD_ROUNDED": 8,
            "CARD_WIDTH": 718,
            "CHECKBOX_HEIGHT": 20,
            "CHECKBOX_WIDTH": 20,
            "FONT": 16,
            "ICON": 16,
            "INPUT_BORDER_RADIUS": 8,
            "INPUT_BORDER_WIDTH": 0.8,
            "INPUT_HEIGHT": 44,
            "INPUT_HELP_TEXT": 12.8,
            "INPUT_HORIZONTAL": 16,
            "INPUT_LABEL_BOTTOM": 4,
            "INPUT_LABEL_TEXT": 14.4,
            "INPUT_ROUNDED": 27.2,
            "INPUT_TEXT": 14,
            "NAVBAR_HEIGHT": 66,
            "NAVBAR_LEFT_FLEX": 0.5,
            "NAVBAR_LEFT_HEIGHT": 93.38000000000001,
            "NAVBAR_LEFT_MARGIN": 16,
            "NAVBAR_RIGHT_FLEX": 0.5,
            "NAVBAR_RIGHT_HEIGHT": 93.38000000000001,
            "NAVBAR_RIGHT_MARGIN": 16,
            "NAVBAR_TITLE_FLEX": 2,
            "NAVBAR_TITLE_HEIGHT": 93.38000000000001,
            "NAVBAR_TITLE_TEXT": 14,
            "NAVBAR_VERTICAL": 16,
            "OPACITY": 0.8,
            "RADIO_HEIGHT": 24,
            "RADIO_THICKNESS": 2,
            "RADIO_WIDTH": 24,
            "THUMB_SIZE": 25,
            "TRACK_SIZE": 4,
          },
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "flexDirection": "column",
            },
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            false,
            null,
            false,
            false,
            false,
            null,
            null,
            null,
            Object {
              "top": 306.82,
            },
          ]
        }
        theme={
          Object {
            "COLORS": Object {
              "BLACK": "#000000",
              "BLOCK": "#808080",
              "DRIBBBLE": "#EA4C89",
              "ERROR": "#FE2472",
              "FACEBOOK": "#3B5998",
              "GREY": "#898989",
              "ICON": "#000000",
              "INFO": "#1232FF",
              "INPUT": "#808080",
              "MUTED": "#9FA5AA",
              "NAVBAR": "#F9F9F9",
              "NEUTRAL": "rgba(255,255,255, 0.65)",
              "PLACEHOLDER": "#9FA5AA",
              "PRIMARY": "#B23AFC",
              "SUCCESS": "#45DF31",
              "THEME": "#B23AFC",
              "TRANSPARENT": "transparent",
              "TWITTER": "#5BC0DE",
              "WARNING": "#FF9C09",
              "WHITE": "#FFFFFF",
            },
            "SIZES": Object {
              "ANDROID_ELEVATION": 1,
              "BASE": 16,
              "BLOCK_SHADOW_OPACITY": 0.15,
              "BLOCK_SHADOW_RADIUS": 8,
              "BORDER_RADIUS": 6,
              "BORDER_WIDTH": 0.8,
              "BUTTON_HEIGHT": 44,
              "BUTTON_SHADOW_RADIUS": 10,
              "BUTTON_WIDTH": 144,
              "CARD_AVATAR_HEIGHT": 40,
              "CARD_AVATAR_RADIUS": 20,
              "CARD_AVATAR_WIDTH": 40,
              "CARD_BORDER_RADIUS": 6.4,
              "CARD_BORDER_WIDTH": 0.8,
              "CARD_FOOTER_HORIZONTAL": 12,
              "CARD_FOOTER_VERTICAL": 12,
              "CARD_IMAGE_HEIGHT": 200,
              "CARD_MARGIN_VERTICAL": 14,
              "CARD_ROUND": 3,
              "CARD_ROUNDED": 8,
              "CARD_WIDTH": 718,
              "CHECKBOX_HEIGHT": 20,
              "CHECKBOX_WIDTH": 20,
              "FONT": 16,
              "ICON": 16,
              "INPUT_BORDER_RADIUS": 8,
              "INPUT_BORDER_WIDTH": 0.8,
              "INPUT_HEIGHT": 44,
              "INPUT_HELP_TEXT": 12.8,
              "INPUT_HORIZONTAL": 16,
              "INPUT_LABEL_BOTTOM": 4,
              "INPUT_LABEL_TEXT": 14.4,
              "INPUT_ROUNDED": 27.2,
              "INPUT_TEXT": 14,
              "NAVBAR_HEIGHT": 66,
              "NAVBAR_LEFT_FLEX": 0.5,
              "NAVBAR_LEFT_HEIGHT": 93.38000000000001,
              "NAVBAR_LEFT_MARGIN": 16,
              "NAVBAR_RIGHT_FLEX": 0.5,
              "NAVBAR_RIGHT_HEIGHT": 93.38000000000001,
              "NAVBAR_RIGHT_MARGIN": 16,
              "NAVBAR_TITLE_FLEX": 2,
              "NAVBAR_TITLE_HEIGHT": 93.38000000000001,
              "NAVBAR_TITLE_TEXT": 14,
              "NAVBAR_VERTICAL": 16,
              "OPACITY": 0.8,
              "RADIO_HEIGHT": 24,
              "RADIO_THICKNESS": 2,
              "RADIO_WIDTH": 24,
              "THUMB_SIZE": 25,
              "TRACK_SIZE": 4,
            },
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "flexDirection": "column",
              },
              false,
              false,
              false,
              Object {
                "alignItems": "center",
                "justifyContent": "center",
              },
              false,
              false,
              false,
              false,
              null,
              false,
              false,
              false,
              null,
              null,
              null,
              undefined,
            ]
          }
          theme={
            Object {
              "COLORS": Object {
                "BLACK": "#000000",
                "BLOCK": "#808080",
                "DRIBBBLE": "#EA4C89",
                "ERROR": "#FE2472",
                "FACEBOOK": "#3B5998",
                "GREY": "#898989",
                "ICON": "#000000",
                "INFO": "#1232FF",
                "INPUT": "#808080",
                "MUTED": "#9FA5AA",
                "NAVBAR": "#F9F9F9",
                "NEUTRAL": "rgba(255,255,255, 0.65)",
                "PLACEHOLDER": "#9FA5AA",
                "PRIMARY": "#B23AFC",
                "SUCCESS": "#45DF31",
                "THEME": "#B23AFC",
                "TRANSPARENT": "transparent",
                "TWITTER": "#5BC0DE",
                "WARNING": "#FF9C09",
                "WHITE": "#FFFFFF",
              },
              "SIZES": Object {
                "ANDROID_ELEVATION": 1,
                "BASE": 16,
                "BLOCK_SHADOW_OPACITY": 0.15,
                "BLOCK_SHADOW_RADIUS": 8,
                "BORDER_RADIUS": 6,
                "BORDER_WIDTH": 0.8,
                "BUTTON_HEIGHT": 44,
                "BUTTON_SHADOW_RADIUS": 10,
                "BUTTON_WIDTH": 144,
                "CARD_AVATAR_HEIGHT": 40,
                "CARD_AVATAR_RADIUS": 20,
                "CARD_AVATAR_WIDTH": 40,
                "CARD_BORDER_RADIUS": 6.4,
                "CARD_BORDER_WIDTH": 0.8,
                "CARD_FOOTER_HORIZONTAL": 12,
                "CARD_FOOTER_VERTICAL": 12,
                "CARD_IMAGE_HEIGHT": 200,
                "CARD_MARGIN_VERTICAL": 14,
                "CARD_ROUND": 3,
                "CARD_ROUNDED": 8,
                "CARD_WIDTH": 718,
                "CHECKBOX_HEIGHT": 20,
                "CHECKBOX_WIDTH": 20,
                "FONT": 16,
                "ICON": 16,
                "INPUT_BORDER_RADIUS": 8,
                "INPUT_BORDER_WIDTH": 0.8,
                "INPUT_HEIGHT": 44,
                "INPUT_HELP_TEXT": 12.8,
                "INPUT_HORIZONTAL": 16,
                "INPUT_LABEL_BOTTOM": 4,
                "INPUT_LABEL_TEXT": 14.4,
                "INPUT_ROUNDED": 27.2,
                "INPUT_TEXT": 14,
                "NAVBAR_HEIGHT": 66,
                "NAVBAR_LEFT_FLEX": 0.5,
                "NAVBAR_LEFT_HEIGHT": 93.38000000000001,
                "NAVBAR_LEFT_MARGIN": 16,
                "NAVBAR_RIGHT_FLEX": 0.5,
                "NAVBAR_RIGHT_HEIGHT": 93.38000000000001,
                "NAVBAR_RIGHT_MARGIN": 16,
                "NAVBAR_TITLE_FLEX": 2,
                "NAVBAR_TITLE_HEIGHT": 93.38000000000001,
                "NAVBAR_TITLE_TEXT": 14,
                "NAVBAR_VERTICAL": 16,
                "OPACITY": 0.8,
                "RADIO_HEIGHT": 24,
                "RADIO_THICKNESS": 2,
                "RADIO_WIDTH": 24,
                "THUMB_SIZE": 25,
                "TRACK_SIZE": 4,
              },
            }
          }
        >
          <Text
            style={
              Array [
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                undefined,
                0,
                Object {
                  "color": "#e63746",
                },
                false,
                false,
                undefined,
                Object {
                  "fontFamily": "montserrat-bold",
                  "fontSize": 30,
                  "fontWeight": "900",
                  "marginBottom": 8,
                },
              ]
            }
          >
            Nombre Apellido
          </Text>
          <Text
            style={
              Array [
                false,
                false,
                false,
                false,
                false,
                false,
                false,
                undefined,
                Object {
                  "fontSize": 16,
                },
                Object {
                  "color": "#0f1e2e",
                },
                false,
                false,
                undefined,
                Object {
                  "fontSize": 18,
                  "lineHeight": 20,
                  "marginTop": 5,
                  "opacity": 0.8,
                },
              ]
            }
          >
            @Usuario
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`<Perfil /> renders correctly 2`] = `
<Text
  style={
    Array [
      false,
      false,
      false,
      false,
      false,
      false,
      false,
      undefined,
      0,
      Object {
        "color": "#e63746",
      },
      false,
      false,
      undefined,
      Object {
        "fontFamily": "montserrat-bold",
        "fontSize": 25,
        "fontWeight": "900",
        "marginBottom": 8,
      },
    ]
  }
>
  Mi Biblioteca
</Text>
`;

exports[`<Perfil /> renders correctly 3`] = `
<View
  style={
    Array [
      Object {
        "flexDirection": "column",
      },
      false,
      Object {
        "flex": 1,
      },
      false,
      false,
      false,
      false,
      false,
      false,
      null,
      false,
      false,
      false,
      null,
      null,
      null,
      undefined,
    ]
  }
  theme={
    Object {
      "COLORS": Object {
        "BLACK": "#000000",
        "BLOCK": "#808080",
        "DRIBBBLE": "#EA4C89",
        "ERROR": "#FE2472",
        "FACEBOOK": "#3B5998",
        "GREY": "#898989",
        "ICON": "#000000",
        "INFO": "#1232FF",
        "INPUT": "#808080",
        "MUTED": "#9FA5AA",
        "NAVBAR": "#F9F9F9",
        "NEUTRAL": "rgba(255,255,255, 0.65)",
        "PLACEHOLDER": "#9FA5AA",
        "PRIMARY": "#B23AFC",
        "SUCCESS": "#45DF31",
        "THEME": "#B23AFC",
        "TRANSPARENT": "transparent",
        "TWITTER": "#5BC0DE",
        "WARNING": "#FF9C09",
        "WHITE": "#FFFFFF",
      },
      "SIZES": Object {
        "ANDROID_ELEVATION": 1,
        "BASE": 16,
        "BLOCK_SHADOW_OPACITY": 0.15,
        "BLOCK_SHADOW_RADIUS": 8,
        "BORDER_RADIUS": 6,
        "BORDER_WIDTH": 0.8,
        "BUTTON_HEIGHT": 44,
        "BUTTON_SHADOW_RADIUS": 10,
        "BUTTON_WIDTH": 144,
        "CARD_AVATAR_HEIGHT": 40,
        "CARD_AVATAR_RADIUS": 20,
        "CARD_AVATAR_WIDTH": 40,
        "CARD_BORDER_RADIUS": 6.4,
        "CARD_BORDER_WIDTH": 0.8,
        "CARD_FOOTER_HORIZONTAL": 12,
        "CARD_FOOTER_VERTICAL": 12,
        "CARD_IMAGE_HEIGHT": 200,
        "CARD_MARGIN_VERTICAL": 14,
        "CARD_ROUND": 3,
        "CARD_ROUNDED": 8,
        "CARD_WIDTH": 718,
        "CHECKBOX_HEIGHT": 20,
        "CHECKBOX_WIDTH": 20,
        "FONT": 16,
        "ICON": 16,
        "INPUT_BORDER_RADIUS": 8,
        "INPUT_BORDER_WIDTH": 0.8,
        "INPUT_HEIGHT": 44,
        "INPUT_HELP_TEXT": 12.8,
        "INPUT_HORIZONTAL": 16,
        "INPUT_LABEL_BOTTOM": 4,
        "INPUT_LABEL_TEXT": 14.4,
        "INPUT_ROUNDED": 27.2,
        "INPUT_TEXT": 14,
        "NAVBAR_HEIGHT": 66,
        "NAVBAR_LEFT_FLEX": 0.5,
        "NAVBAR_LEFT_HEIGHT": 93.38000000000001,
        "NAVBAR_LEFT_MARGIN": 16,
        "NAVBAR_RIGHT_FLEX": 0.5,
        "NAVBAR_RIGHT_HEIGHT": 93.38000000000001,
        "NAVBAR_RIGHT_MARGIN": 16,
        "NAVBAR_TITLE_FLEX": 2,
        "NAVBAR_TITLE_HEIGHT": 93.38000000000001,
        "NAVBAR_TITLE_TEXT": 14,
        "NAVBAR_VERTICAL": 16,
        "OPACITY": 0.8,
        "RADIO_HEIGHT": 24,
        "RADIO_THICKNESS": 2,
        "RADIO_WIDTH": 24,
        "THUMB_SIZE": 25,
        "TRACK_SIZE": 4,
      },
    }
  }
>
  <View
    style={
      Array [
        Object {
          "flexDirection": "column",
        },
        Object {
          "flexDirection": "row",
        },
        Object {
          "flex": 1,
        },
        false,
        false,
        false,
        false,
        false,
        false,
        null,
        false,
        false,
        false,
        null,
        null,
        null,
        undefined,
      ]
    }
    theme={
      Object {
        "COLORS": Object {
          "BLACK": "#000000",
          "BLOCK": "#808080",
          "DRIBBBLE": "#EA4C89",
          "ERROR": "#FE2472",
          "FACEBOOK": "#3B5998",
          "GREY": "#898989",
          "ICON": "#000000",
          "INFO": "#1232FF",
          "INPUT": "#808080",
          "MUTED": "#9FA5AA",
          "NAVBAR": "#F9F9F9",
          "NEUTRAL": "rgba(255,255,255, 0.65)",
          "PLACEHOLDER": "#9FA5AA",
          "PRIMARY": "#B23AFC",
          "SUCCESS": "#45DF31",
          "THEME": "#B23AFC",
          "TRANSPARENT": "transparent",
          "TWITTER": "#5BC0DE",
          "WARNING": "#FF9C09",
          "WHITE": "#FFFFFF",
        },
        "SIZES": Object {
          "ANDROID_ELEVATION": 1,
          "BASE": 16,
          "BLOCK_SHADOW_OPACITY": 0.15,
          "BLOCK_SHADOW_RADIUS": 8,
          "BORDER_RADIUS": 6,
          "BORDER_WIDTH": 0.8,
          "BUTTON_HEIGHT": 44,
          "BUTTON_SHADOW_RADIUS": 10,
          "BUTTON_WIDTH": 144,
          "CARD_AVATAR_HEIGHT": 40,
          "CARD_AVATAR_RADIUS": 20,
          "CARD_AVATAR_WIDTH": 40,
          "CARD_BORDER_RADIUS": 6.4,
          "CARD_BORDER_WIDTH": 0.8,
          "CARD_FOOTER_HORIZONTAL": 12,
          "CARD_FOOTER_VERTICAL": 12,
          "CARD_IMAGE_HEIGHT": 200,
          "CARD_MARGIN_VERTICAL": 14,
          "CARD_ROUND": 3,
          "CARD_ROUNDED": 8,
          "CARD_WIDTH": 718,
          "CHECKBOX_HEIGHT": 20,
          "CHECKBOX_WIDTH": 20,
          "FONT": 16,
          "ICON": 16,
          "INPUT_BORDER_RADIUS": 8,
          "INPUT_BORDER_WIDTH": 0.8,
          "INPUT_HEIGHT": 44,
          "INPUT_HELP_TEXT": 12.8,
          "INPUT_HORIZONTAL": 16,
          "INPUT_LABEL_BOTTOM": 4,
          "INPUT_LABEL_TEXT": 14.4,
          "INPUT_ROUNDED": 27.2,
          "INPUT_TEXT": 14,
          "NAVBAR_HEIGHT": 66,
          "NAVBAR_LEFT_FLEX": 0.5,
          "NAVBAR_LEFT_HEIGHT": 93.38000000000001,
          "NAVBAR_LEFT_MARGIN": 16,
          "NAVBAR_RIGHT_FLEX": 0.5,
          "NAVBAR_RIGHT_HEIGHT": 93.38000000000001,
          "NAVBAR_RIGHT_MARGIN": 16,
          "NAVBAR_TITLE_FLEX": 2,
          "NAVBAR_TITLE_HEIGHT": 93.38000000000001,
          "NAVBAR_TITLE_TEXT": 14,
          "NAVBAR_VERTICAL": 16,
          "OPACITY": 0.8,
          "RADIO_HEIGHT": 24,
          "RADIO_THICKNESS": 2,
          "RADIO_WIDTH": 24,
          "THUMB_SIZE": 25,
          "TRACK_SIZE": 4,
        },
      }
    }
  />
</View>
`;
